--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <!-- <h5>Room Number: <span >001</span></h5> -->
 
             <div class="panel-content-group text-center">
-              <h5>Room Number: <span >001</span></h5>
+              <h5>Room Number: <span >1</span></h5>
               <span id="lobbyStatus"></span>
             </div>
   
@@ -62,21 +62,22 @@
                 <h5>0</h5>
               </div>
               
-              <p>Bug-1 - X:0 Y:0 Holder:null</p>
-              <p>Bug-2 - X:0 Y:0 Holder:null</p>
-              <p>Bug-3 - X:0 Y:0 Holder:null</p>
+              <p>Bug-1 - <span id='bug-1-info'></span></p>
+              <p>Bug-2 - <span id='bug-2-info'></span></p>
+              <p>Bug-3 - <span id='bug-3-info'></span></p>
               <br>
-              <p>Bug-4 - X:0 Y:0 Holder:null</p>
-              <p>Bug-5 - X:0 Y:0 Holder:null</p>
-              <p>Bug-6 - X:0 Y:0 Holder:null</p>
+              <p>Bug-4 - <span id='bug-4-info'></span></p>
+              <p>Bug-5 - <span id='bug-5-info'></span></p>
+              <p>Bug-6 - <span id='bug-6-info'></span></p>
               <br>
-              <p>Bug-7 - X:0 Y:0 Holder:null</p>
-              <p>Bug-8 - X:0 Y:0 Holder:null</p>
-              <p>Bug-9 - X:0 Y:0 Holder:null</p>
+              <p>Bug-7 - <span id='bug-7-info'></span></p>
+              <p>Bug-8 - <span id='bug-8-info'></span></p>
+              <p>Bug-9 - <span id='bug-9-info'></span></p>
               <br>
-              <p>Bug-10 - X:0 Y:0 Holder:null</p>
-              <p>Bug-11 - X:0 Y:0 Holder:null</p>
-              <p>Bug-12 - X:0 Y:0 Holder:null</p>
+              <p>Bug-10 - <span id='bug-10-info'></span></p>
+              <p>Bug-11 - <span id='bug-11-info'></span></p>
+              <p>Bug-12 - <span id='bug-12-info'></span></p>
+
               <canvas id="specplayers"></canvas>
   
             </div>
@@ -104,12 +105,12 @@
               <span id="stats_1"></span>
               <br>
               Health:
-              <!-- <progress value="22" max="100"></progress> -->
+
               <div class="progress w-50">
-                <div class="progress-bar progress-bar-red" id="redHealth" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-red" style='width: 100%;' id="redHealth" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
               Resources:
-              <!-- <progress value="2" max="100"></progress> -->
+
               <div class="progress w-50">
                 <div class="progress-bar progress-bar-red" id="redResource" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -121,12 +122,12 @@
               <span id="stats_2"></span>
               <br>
               Health:
-              <!-- <progress value="22" max="100"></progress> -->
+
               <div class="progress w-50">
-                <div class="progress-bar progress-bar-blue" id="blueHealth" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-blue" style='width: 100%;' id="blueHealth" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
               Resources:
-              <!-- <progress value="2" max="100"></progress> -->
+
               <div class="progress w-50">
                 <div class="progress-bar progress-bar-blue" id="blueResource" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -138,12 +139,12 @@
               <span id="stats_3"></span>
               <br>
               Health:
-              <!-- <progress value="22" max="100"></progress> -->
+
               <div class="progress w-50">
-                <div class="progress-bar progress-bar-green" id="greenHealth" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-green" style='width: 100%;' id="greenHealth" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
               Resources:
-              <!-- <progress value="2" max="100"></progress> -->
+
               <div class="progress w-50">
                 <div class="progress-bar progress-bar-green" id="greenResource" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -155,12 +156,12 @@
               <span id="stats_4"></span>
               <br>
               Health:
-              <!-- <progress value="22" max="100"></progress> -->
+
               <div class="progress w-50">
-                <div class="progress-bar progress-bar-yellow" id="yellowHealth" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar progress-bar-yellow" style='width: 100%;' id="yellowHealth" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
               Resources:
-              <!-- <progress value="2" max="100"></progress> -->
+
               <div class="progress w-50">
                 <div class="progress-bar progress-bar-yellow" id="yellowResource" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
