Organized files and fixed up some bug collision issues

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         </div>
 
-        <div class="col-6 col-xl-3 my-auto order-xl-1">
+        <div class="col-6 col-xl-3 d-none d-lg-block my-auto order-xl-1">
 
           <div class="panel">
 
@@ -96,7 +96,7 @@
 
         </div>
 
-        <div class="col-6 col-xl-3 my-auto order-xl-3">
+        <div class="col-6 col-xl-3 d-none d-lg-block my-auto order-xl-3">
 
           <div class="panel panel-right">
             <div class="panel-content-group">
@@ -182,6 +182,10 @@
 
         </div>
 
+        <div class="col-12">
+          <div id="touch-controls"></div>
+        </div>
+
       </div>
     </div>
   </section>
@@ -190,16 +194,16 @@
   <img style="display: none;" id="padGreen" src="https://flexboxfroggy.com/images/lilypad-green.svg">
   <img style="display: none;" id="padYellow" src="https://flexboxfroggy.com/images/lilypad-yellow.svg">
   <img style="display: none;" id="padRed" src="https://flexboxfroggy.com/images/lilypad-red.svg">
-  <img style="display: none;" id="padBlue" src="padBlue.svg">
+  <img style="display: none;" id="padBlue" src="assets/img/padBlue.svg">
 
-  <img style="display: none;" id="bug-1" src="bug-1.png" width="10">
-  <img style="display: none;" id="bug-2" src="bug-2.png" width="30">
-  <img style="display: none;" id="bug-3" src="bug-3.png" width="30">
-  <img style="display: none;" id="bug-4" src="bug-4.png" width="30">
-  <img style="display: none;" id="bug-5" src="bug-5.png" width="10">
-  <img style="display: none;" id="bug-6" src="bug-6.png" width="30">
-  <img style="display: none;" id="bug-7" src="bug-7.png" width="30">
-  <img style="display: none;" id="bug-8" src="bug-8.png" width="30">
+  <img style="display: none;" id="bug-1" src="assets/img/bug-1.png" width="10">
+  <img style="display: none;" id="bug-2" src="assets/img/bug-2.png" width="30">
+  <img style="display: none;" id="bug-3" src="assets/img/bug-3.png" width="30">
+  <img style="display: none;" id="bug-4" src="assets/img/bug-4.png" width="30">
+  <img style="display: none;" id="bug-5" src="assets/img/bug-5.png" width="10">
+  <img style="display: none;" id="bug-6" src="assets/img/bug-6.png" width="30">
+  <img style="display: none;" id="bug-7" src="assets/img/bug-7.png" width="30">
+  <img style="display: none;" id="bug-8" src="assets/img/bug-8.png" width="30">
 
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -260,5 +264,7 @@
 </script>
 
 <script src="/static/game.js"></script>
+<script src="/static/controls.js"></script>
+<!-- <script src="/static/controls2.js"></script> -->
 
 </html>
