--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <link rel="shortcut icon" href="assets/favicon.png">
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <link href="https://fonts.googleapis.com/css?family=Dokdo" rel="stylesheet">
@@ -82,11 +84,6 @@
   
             </div>
 
-            <!-- <h5 class="mt-3">Ad</h5>
-            <div class="panel-content-group mt-0" id="ad-holder">
-              <div class="ad"></div>
-            </div> -->
-
             <div style="display: flex; flex-direction: row; justify-content: space-between; margin-top: 2rem;">
               <button id="controls" class="btn btn-panel btn-lg" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-gamepad pr-2"></i>Controls</button>
               <button id="nameChange" class="btn btn-panel btn-lg"><i class="fas fa-edit pr-2"></i>Name</button>
@@ -99,21 +96,26 @@
         <div class="col-6 col-xl-3 d-none d-lg-block my-auto order-xl-3">
 
           <div class="panel panel-right">
+
             <div class="panel-content-group">
               <h5>Red Player</h5>
               <div id="playerOneId">id</div>
               <span id="stats_1"></span>
-              <br>
-              Health:
-
-              <div class="progress w-50">
-                <div class="progress-bar progress-bar-red" style='width: 100%;' id="redHealth" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              
+              <div class="d-inline-block w-50">
+                <div>Health:</div>
+                <div class="progress">
+                  <div class="progress-bar progress-bar-red" style='width: 100%;' id="redHealth" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
               </div>
-              Resources:
 
-              <div class="progress w-50">
-                <div class="progress-bar progress-bar-red" id="redResource" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="d-inline-block w-50">
+                <div>Resources:</div>
+                <div class="progress">
+                  <div class="progress-bar progress-bar-red" id="redResource" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
               </div>
+
             </div>
   
             <div class="panel-content-group">
@@ -169,8 +171,8 @@
 
             <div class="space-fill" style="flex-grow: 1;"></div>
 
-            <h5 class="mt-5 d-none">Server Sponser</h5>
-            <div class="panel-content-group mt-0 d-none" id="ad-holder-full">
+            <h5 class="mt-5">Server Sponser</h5>
+            <div class="panel-content-group mt-0" id="ad-holder-full">
               <a href="https://cosmicstudios.xyz" target="_blank">
                 <div class="ad-cosmic">
                   <img src="https://cosmicstudios.xyz/assets/img/profile.svg" height="75px" alt="">
@@ -190,7 +192,6 @@
     </div>
   </section>
 
-  <img style="display: none;" id="pad" src="pad.png" width="30">
   <img style="display: none;" id="padGreen" src="https://flexboxfroggy.com/images/lilypad-green.svg">
   <img style="display: none;" id="padYellow" src="https://flexboxfroggy.com/images/lilypad-yellow.svg">
   <img style="display: none;" id="padRed" src="https://flexboxfroggy.com/images/lilypad-red.svg">
@@ -265,6 +266,5 @@
 
 <script src="/static/game.js"></script>
 <script src="/static/controls.js"></script>
-<!-- <script src="/static/controls2.js"></script> -->
 
 </html>
