--- a/join.html
+++ b/join.html
@@ -21,33 +21,57 @@
     <div id="startScreen_background"></div>
 
     <div class="login-form" style="font-family: 'Dokdo', cursive; font-size: 1.5rem;">
-      <h1 style="font-family: 'Dokdo', cursive;">Welcome</h1>
-      <a data-toggle="modal" data-target="#exampleModal" style="color: #6f3d1e;"  onclick="javascript.preventDefault()"><span style='font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"; font-size: 1rem;'>ℹ️</span>Controls and Rules</a>
+      <h1 class="mb-0" style="font-family: 'Dokdo', cursive;">Welcome</h1>
+      <!-- <a data-toggle="modal" data-target="#exampleModal" style="color: #6f3d1e;"  onclick="javascript.preventDefault()"><span style='font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"; font-size: 1rem;'>ℹ️</span>Controls and Rules</a> -->
 
         <div class="form-group">
-          <label for="room">Room Number (disabled)</label>
+          <label class="mb-0" for="room">Room</label>
           <br>
-          <button class="btn btn-success d-inline-block" disabled>1</button>
-          <button class="btn btn-success d-inline-block" disabled>2</button>
-          <button class="btn btn-success d-inline-block" disabled>3</button>
-          <!-- <button class="btn btn-success d-inline-block">4</button> -->
-          <!-- <button class="btn btn-success d-inline-block">5</button> -->
-          <!-- <input class="form-control" type="number" placeholder="000" id="room" name="room" max="999" maxlength="3"> -->
+          <div class="d-inline-block">
+            <button class="btn btn-success active d-block">
+              1<br>0/4
+            </button>
+            <div class="room-time">5:00</div>
+          </div>
+          <div class="d-inline-block">
+            <button class="btn btn-success d-block">
+              2<br>0/4
+            </button>
+            <div class="room-time">5:00</div>
+          </div>
+          <div class="d-inline-block">
+            <button class="btn btn-success d-block">
+              3<br>0/4
+            </button>
+            <div class="room-time">5:00</div>
+          </div>
+          <div class="d-inline-block">
+            <button class="btn btn-success d-block">
+              4<br>0/4
+            </button>
+            <div class="room-time">5:00</div>
+          </div>
+          <div class="d-inline-block">
+            <button class="btn btn-success d-block">
+              5<br>0/4
+            </button>
+            <div class="room-time">5:00</div>
+          </div>
         </div>
   
         <div class="form-group">
-          <label for="nickname">Nickname</label>
-          <input class="form-control" type="text" placeholder="" id="nickname" name="nickname" autocomplete="off">
-          <small id="emailHelp" class="form-text text-muted" style="color: #4d5256!important">Visible to all players in the game.</small>
+          <label class="mb-0" for="nickname">Nickname</label>
+          <input class="form-control" type="text" placeholder="" id="nickname" name="nickname" maxlength="8" autocomplete="off">
+          <small id="emailHelp" class="form-text text-muted" style="color: #4d5256!important">Visible To Other Players</small>
         </div>
   
         <div>
-          <button class="btn btn-success" type="submit">Play</button>
+          <button id="submit" class="btn btn-success w-100" type="submit">Play</button>
         </div>
 
     </div>
 
-    <div style="font-family: 'Dokdo', cursive; font-size: 1.5rem;" class="version">Alpha Build 0.7</div>
+    <div style="font-family: 'Dokdo', cursive; font-size: 1.5rem;" class="version">Beta 0.5</div>
   </section>
 
   <!-- Modal -->
@@ -103,7 +127,7 @@ integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07j
 crossorigin="anonymous">
 </script>
 <script>
-    $('button').click( function() {
+    $('#submit').click( function() {
         document.cookie = 'nickname='+$('#nickname').val()+'; path=/';
         doSomething();
     });
