--- a/join.html
+++ b/join.html
@@ -13,6 +13,13 @@
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 
   <link rel="stylesheet" href="./assets/css/styles.css">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-8644888110815590",
+      enable_page_level_ads: true
+    });
+  </script>
 </head>
 
 <body>
