Worked on server restarts, lobby and powerups for players

--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
 
   <img style="display: none;" id="powerup-1" src="assets/img/powerup.jpg" width="30">
   <img style="display: none;" id="health" src="assets/img/health.jpg" width="30">
+  <img style="display: none;" id="stink" src="assets/img/stink.png" width="30">
 
   <!-- Modal -->
   <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
