--- a/index.html
+++ b/index.html
@@ -17,15 +17,8 @@
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="./assets/css/styles.css">
+  <link rel="stylesheet" href="/assets/css/styles.css?v=1">
 
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({
-      google_ad_client: "ca-pub-8644888110815590",
-      enable_page_level_ads: true
-    });
-  </script>
 </head>
 
 <body>
@@ -71,12 +64,12 @@
     <div class="container-fluid h-100">
       <div class="row h-100">
 
-        <div class="col-12 col-xl-6 my-auto order-xl-2">
+        <div class="col-12 col-xl-6 pt-3 my-auto order-xl-2">
 
           <!-- Lags the site, delay. -->
           <!-- <img class="img-fluid ripple" src="./assets/ripple.gif" alt=""> -->
 
-          <div class="hidden-timer">
+          <div class="hidden-timer noselect">
             <span id="time_left">Waiting...</span>
           </div>
 
@@ -254,8 +247,48 @@
 
         </div>
 
-        <div class="col-12">
-          <div id="touch-controls"></div>
+        <div class="col-12 d-md-none">
+
+            <div id="zone_joystick" class="noselect">
+
+                <div id="debug">
+                    <ul>
+                        <li class="position">
+                            position :
+                            <ul>
+                                <li class="x">x : <span class='data'></span></li>
+                                <li class="y">y : <span class='data'></span></li>
+                            </ul>
+                        </li>
+                        <li class="force">force : <span class='data'></span></li>
+                        <li class="pressure">pressure : <span class='data'></span></li>
+                        <li class="distance">distance : <span class='data'></span></li>
+                        <li class="angle">
+                            angle :
+                            <ul>
+                                <li class="radian">radian : <span class='data'></span></li>
+                                <li class="degree">degree : <span class='data'></span></li>
+                            </ul>
+                        </li>
+                        <li class="direction">
+                            direction :
+                            <ul>
+                                <li class="x">x : <span class='data'></span></li>
+                                <li class="y">y : <span class='data'></span></li>
+                                <li class="angle">angle : <span class='data'></span></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <div class="dump"></div>
+                </div>
+    
+                <div style="height: 300px; width: 100%;" class="zone static active noselect">
+                  <h1><div class="circle"></div>nippleJS</h1>
+                  <div class="side-button"></div>
+                </div>
+    
+            </div>
+
         </div>
 
       </div>
@@ -338,7 +371,9 @@
   })
 </script>
 
-<script src="/static/game.js"></script>
+<script src="/dist/nipplejs.js"></script>
 <script src="/static/controls.js"></script>
+<script src="/static/game.js"></script>
+
 
 </html>
