Added forever for node.js server, new approach to game reset. Was tryin to to reset game object but need to look into lodash, now server just restarts when game is over. Only one game lobby can be used now. Moving multiple lobbys to a lower priority

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         
         <hr>
         <h5 class="mt-0 text-center">Lobby Will Restart</h5>
-        <h5 class="mt-0 text-center"><span id="scoreboard-timer">1:00</span></h5>
+        <h5 class="mt-0 text-center"><span id="scoreboard-timer">10</span></h5>
       </div>
     </div>
 
@@ -109,7 +109,7 @@
   
             </div>
 
-            <div class="panel-content-group debug">
+            <div id="debug-bug-info" class="panel-content-group debug">
               <h5>Debug Info</h5>
               <p>Bug-1 - <span id='bug-1-info'></span></p>
               <p>Bug-2 - <span id='bug-2-info'></span></p>
