--- a/move.html
+++ b/move.html
@@ -25,34 +25,11 @@
     <div class="login-form" style="font-family: 'Dokdo', cursive; font-size: 1.5rem;">
       <h1 class="mb-0" style="font-family: 'Dokdo', cursive;">Welcome</h1>
 
-        <div class="form-group">
-          <label class="mb-0" for="room">Room</label>
-          <br>
-
-          <div class="d-inline-block">
-            <button id="room-1" class="btn btn-success active d-block">
-              1<br>0/4
-            </button>
-            <!-- <div class="room-time">5:00</div> -->
-          </div>
-
-        </div>
+      <p>Moved development locally as I am changing AWS configuration.</p>
   
-        <div class="form-group nickname-group">
-
-          <label class="mb-0" for="nickname">Nickname</label>
-          <input class="form-control" type="text" placeholder="" id="nickname" name="nickname" maxlength="8" autocomplete="off">
-          <small id="emailHelp" class="form-text text-muted" style="color: #4d5256!important">Visible To All Players</small>
-
-          <div id="new-name">
-            <i class="fas fa-redo"></i>
-          </div>
-
-        </div>
-  
-        <div>
-          <button id="submit" class="btn btn-success w-100" type="submit">Play</button>
-        </div>
+      <div>
+        <button id="submit" class="btn btn-success w-100" type="submit">Play</button>
+      </div>
 
     </div>
 
@@ -148,16 +125,18 @@ crossorigin="anonymous">
     function doSomething() {
         var myCookie = getCookie("nickname");
 
-        if (myCookie == null) {
-            // do cookie doesn't exist stuff;
-            window.location.replace("../join.html");
-            console.log("No Cookie :(");
-        }
-        else {
-            // do cookie exists stuff;
-            console.log("Cookie :)");
-            window.location.replace("/");
-        }
+        // if (myCookie == null) {
+        //     // do cookie doesn't exist stuff;
+        //     window.location.replace("../join.html");
+        //     console.log("No Cookie :(");
+        // }
+        // else {
+        //     // do cookie exists stuff;
+        //     console.log("Cookie :)");
+        //     window.location.replace("/");
+        // }
+
+        window.location.replace("http://47.18.18.170:8081/");
     }
 </script>
 
