Getting repo up to date

--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
           <!-- Lags the site, delay. -->
           <!-- <img class="img-fluid ripple" src="./assets/ripple.gif" alt=""> -->
 
+          <div class="powerup-times">
+            <span class="badge badge-success">2:30</span>
+            <span class="badge badge-success">2:00</span>
+            <span class="badge badge-success">1:30</span>
+            <span class="badge badge-success">1:00</span>
+          </div>
+
           <div class="hidden-timer noselect">
             <span id="time_left">Waiting...</span>
           </div>
